Fixed table + links in scroll view

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">SoftwareApp</string>
+
+    <string name="LinkToSite">
+        <a href = "www.google.com"> First Link
+
+        </a>
+    </string>
 </resources>
