--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">SoftwareApp</string>
 
     <string name="LinkToSite">
-        <a href = "http://www.google.com"> First Link
+        <a href = "https://www.mentalhealthireland.ie/?gclid=Cj0KCQiAhKviBRCNARIsAAGZ7CcvEsdTcXs6_6EdpYSZQsW_5b8WoNCx9EhUP7n2_B-ED8oxJGIIV3oaAs0eEALw_wcB"> Mental Health Ireland
 
         </a>
     </string>
