--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -99,5 +99,9 @@
     <string name="please_enter_your_email">Please Enter your Email</string>
     <string name="reset">Reset</string>
     <string name="by_clicking_reset_you_will_receive_an_email_to_reset_your_password">By clicking RESET, you will receive an email to reset your password</string>
+    <string name="chat">CHAT</string>
+    <string name="journal">JOURNAL</string>
+    <string name="audio">AUDIO</string>
+    <string name="support">SUPPORT</string>
 
 </resources>
